# SGLite

./: .gitignore  README.md  pyproject.toml
docs/: arch.md  feats.md
python/sglite/: __main__.py  cli.py  sampling_params.py
python/sglite/kernels/: __init__.py  __main__.py  index.py  moe_triton.py  pynccl.py  radix.py  store.py  tensor.py  utils.py
python/sglite/kernels/csrc/jit/: index.cu  store.cu
python/sglite/kernels/csrc/src/: pynccl.cu  radix.cpp  tensor.cpp
python/sglite/kernels/triton/: fused_moe.py
python/sglite/llm/: __init__.py  llm.py
python/sglite/srt/: __init__.py  envs.py  forward_context.py  request_state.py
python/sglite/srt/distributed/: __init__.py  communicator.py  info.py
python/sglite/srt/entrypoints/: __init__.py  api.py  args.py  cli.py  frontend_manager.py  launch.py  protocol.py
python/sglite/srt/mem_cache/: __init__.py  base.py  mha_kv_pool.py  naive_cache.py  radix_cache.py
python/sglite/srt/messages/: __init__.py  backend.py  frontend.py  serialization.py  tokenizer.py
python/sglite/srt/model_executor/: __init__.py  config.py  cuda_graph.py  engine.py  sampler.py
python/sglite/srt/model_executor/layers/: __init__.py  activation.py  attention_layer.py  base.py  embedding.py  linear.py  (+3 more)
python/sglite/srt/scheduler/: __init__.py  cache.py  config.py  decode.py  io.py  pending_request.py  prefill.py  scheduler.py  table.py
python/sglite/srt/tokenizer/: __init__.py  detokenize.py  server.py  tokenize.py
python/sglite/srt/utils/: __init__.py  arch.py  hf.py  logger.py  misc.py  registry.py  torch_utils.py  zmq_queue.py
(+32 files in other folders)
